[gd_scene load_steps=5 format=3 uid="uid://by15vcsccwjr"]

[ext_resource type="Script" path="res://assets/graphics/background.gd" id="1_2ueyq"]
[ext_resource type="Texture2D" uid="uid://bh66ixc62sohf" path="res://assets/textures/town-background.png" id="1_3srl6"]
[ext_resource type="Texture2D" uid="uid://8xfnpu402fx" path="res://assets/textures/wall-background.png" id="2_34m1d"]
[ext_resource type="Texture2D" uid="uid://bcq0fxwi8hy0x" path="res://assets/textures/land-background.png" id="3_hpqvr"]

[node name="Background" type="Node2D"]
script = ExtResource("1_2ueyq")

[node name="Town_Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_3srl6")

[node name="Wall_Background" type="Sprite2D" parent="."]
position = Vector2(2020, 540)
texture = ExtResource("2_34m1d")

[node name="Land_Background" type="Sprite2D" parent="."]
position = Vector2(3080, 540)
texture = ExtResource("3_hpqvr")
